--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2035,19 +2035,6 @@ span.dashicons.dashicons-admin-file:before {
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 3px;
   padding: 3px;
-  font-family: dashicons;
-}
-
-.bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-action-wrap > a i.document-icon-download:before {
-  content: "\f316";
-}
-
-.bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-action-wrap > a i.document-icon-download-more:before {
-  content: "\f333";
-}
-
-.bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-action-wrap > a i.document-icon-collapse:before {
-  content: "\f342";
 }
 
 .bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-action-wrap > a:hover i {
@@ -2085,6 +2072,7 @@ span.dashicons.dashicons-admin-file:before {
 .bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-action-wrap .document-action_list ul {
   list-style: none;
   margin: 10px 0;
+  padding: 0;
 }
 
 .bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-action-wrap .document-action_list ul li {
@@ -2245,6 +2233,7 @@ span.dashicons.dashicons-admin-file:before {
   width: 100%;
   float: right;
   outline: 0;
+  border-radius: 35px;
 }
 
 .bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-text-wrap .CodeMirror {
@@ -10515,6 +10504,11 @@ body.login .login-popup .mfp-close:hover {
   transition: all 0.3s ease;
 }
 
+.modal-container.has-folderlocationUI {
+  max-height: 90vh;
+  overflow: auto;
+}
+
 .bb-model-wrap .modal-container {
   border: 1px solid #d2d4d6;
 }
@@ -11708,6 +11702,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list ul {
   list-style: none;
   margin: 10px 0;
+  padding: 0;
 }
 
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list ul li a {
@@ -11920,6 +11915,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 #bp-media-single-folder .bp-media-header-wrap .media-folder_items .media-folder_action__list ul {
   list-style: none;
   margin: 10px 0;
+  padding: 0;
 }
 
 #bp-media-single-folder .bp-media-header-wrap .media-folder_items .media-folder_action__list ul li .media-edit-folder {
@@ -12047,11 +12043,11 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
   color: #a5a7ab;
 }
 
-.bb-field-wrap-search {
+.has-folderlocationUI .bb-field-wrap-search {
   position: relative;
 }
 
-.bb-field-wrap-search:after {
+.has-folderlocationUI .bb-field-wrap-search:after {
   content: '\e81f';
   font-family: bb-icons;
   display: inline-block;
@@ -12059,10 +12055,12 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
   opacity: .4;
   position: absolute;
   right: 12px;
-  top: 6px;
+  top: 12px;
+  line-height: 1;
+  font-size: 16px;
 }
 
-.bb-field-wrap-search .ac_document_search_folder {
+.has-folderlocationUI .bb-field-wrap-search .ac_document_search_folder {
   border-radius: 30px;
   padding-right: 35px;
 }
@@ -12082,7 +12080,6 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-back,
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-back {
   display: none;
-  margin-right: 10px;
   cursor: pointer;
   vertical-align: middle;
 }
@@ -12091,6 +12088,11 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-back i {
   display: inline-block;
   vertical-align: middle;
+  font-size: 34px;
+  height: 25px;
+  line-height: 25px;
+  width: 20px;
+  user-select: none;
 }
 
 .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list,
@@ -12125,8 +12127,9 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 
 .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li span:before,
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span:before {
-  font-family: dashicons;
-  content: "\f318";
+  content: '\e8ec';
+  font-family: "bb-icons";
+  color: #939597;
   margin-left: 10px;
 }
 
@@ -12146,8 +12149,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
   position: absolute;
   left: 5px;
   top: 50%;
-  bottom: 0;
-  padding: 2px 3px;
+  font-size: 34px;
   line-height: 1;
   visibility: hidden;
   opacity: 0;
@@ -12163,6 +12165,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li ul {
   display: none;
   margin: 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -12180,6 +12183,11 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list::-webkit-scrollbar-thumb {
   background-color: #a4acb4;
   border-radius: 10px;
+}
+
+.location-folder-list-wrap-main.is-mobile .location-folder-list-wrap .location-folder-list li .sub-menu-anchor {
+  visibility: visible;
+  opacity: 1;
 }
 
 /* BASICS */
