--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1368,6 +1368,11 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		.media-folder_name{
 			color: #122B46;
 		}
+		.media-folder_name_edit{
+			height: 32px;
+			display: none;
+			margin-bottom: 8px;
+		}
 	}
 	.media-folder_details__bottom{
 		display: block;
