--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -11623,6 +11623,10 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
   color: #122B46;
 }
 
+#media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name > span {
+  white-space: pre;
+}
+
 #media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name_edit {
   height: 32px;
   display: none;
