--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -630,6 +630,17 @@ span.dashicons.dashicons-admin-file:before {
 	width: 100%;
 	margin: 3px;
 	padding: 0;
+	&:hover{
+		background-color: #f5f6f7;
+		.document-audio-wrap audio::-webkit-media-controls-panel{
+			background-color: #fff;
+		}
+		.document-description-wrap .entry-img:after{
+			opacity: 1;
+			visibility: visible;
+			bottom: 10px
+		}
+	}
 	.document-text:not(.loaded):after{
 		content: '\e838';
 		font-family: bb-icons;
@@ -647,15 +658,16 @@ span.dashicons.dashicons-admin-file:before {
 		-webkit-box-direction: normal;
 		-ms-flex-direction: row;
 		flex-direction: row;
+		padding: 5px 15px;
 		.entry-img {
-			-ms-flex-preferred-size: 70px;
-			flex-basis: 70px;
-			width: 70px;
+			-ms-flex-preferred-size: 40px;
+			flex-basis: 40px;
+			width: 40px;
 			text-align: center;
 			padding: 15px 0;
 			display: inline-block;
 			vertical-align: middle;
-			background-color: #f2f2f2;
+			position: relative;
 			img{
 				width: 35px;
 				height: 35px;
@@ -663,6 +675,29 @@ span.dashicons.dashicons-admin-file:before {
 				object-fit: inherit;
 				min-height: inherit;
 				min-width: inherit;
+			}
+			&:after{
+				content: '\e861';
+				font-family: 'bb-icons';
+				font-style: normal;
+				font-weight: normal;
+				speak: none;
+				display: inline-block;
+				text-decoration: inherit;
+				position: absolute;
+				bottom: 16px;
+				right: 0;
+				font-size: 11px;
+				color: #fff;
+				background-color: #000;
+				border-radius: 50%;
+				height: 20px;
+				width: 20px;
+				border: 2px solid #f2f2f2;
+				opacity: 0;
+				visibility: hidden;
+				-webkit-transition: all .3s ease;
+				transition: all .3s ease;
 			}
 	  }
 	  .document-detail-wrap{
@@ -679,12 +714,14 @@ span.dashicons.dashicons-admin-file:before {
 		  white-space: nowrap;
 		  width: calc(100% - 70px);
 		  display: block;
-		  font-weight: bold;
+		  font-weight: 500;
+		  font-size: 16px;
 		}
 		.document-description,
 		.document-helper-text{
 		  display: inline-block;
-		  color: #7F868F;
+		  color: #939597;
+		  font-size: 13px;
 		}
 		.document-helper-text{
 			position: relative;
@@ -708,21 +745,21 @@ span.dashicons.dashicons-admin-file:before {
 		-o-transition: all 0.3s ease;
 		transition: all 0.3s ease;
 		&>a{
-			display: inline-block;
-			margin-left: 8px;
+			float: left;
 			-webkit-transition: all 0.3s ease;
 			-o-transition: all 0.3s ease;
 			transition: all 0.3s ease;
 			i{
 				font-size: 19px;
-				color: #122b46;
-				background-color: rgba(255, 255, 255, 0.9);
-				border-radius: 3px;
-				padding: 3px;				
+				color: #9CA8B4;
+				background-color: #fff;
+				padding: 7px;
+				border: 1px solid #E7E9EC;
+				border-left-width: 0;
 			}
 			&:hover{
 				i{
-					background-color: #fff;
+					color: #461212;
 				}
 			}
 			&[data-balloon]:after{
@@ -733,17 +770,23 @@ span.dashicons.dashicons-admin-file:before {
 			&[data-balloon][data-balloon-pos='down']:before{
 				margin-top: -1px;
 			}
-			&.document-action_collapse{
+			&.document-action_more{
 				i{
-					background-color: #122b46;
-					color: #fff;
+					
+					border-radius: 0 3px 3px 0;
+				}
+			}
+			&.document-action_download{
+				i{
+					border-left-width: 1px;
+					border-radius: 3px 0 0 3px;
 				}
 			}
 		  }
 		  .document-action_list{
 				position: absolute;
-				top: 26px;
-				right: -4px;
+				top: 36px;
+				right: 1px;
 				opacity: 0;
 				visibility: hidden;
 				background: #fff;
@@ -852,9 +895,6 @@ span.dashicons.dashicons-admin-file:before {
 			opacity:1;
 			visibility:visible;
 		}
-		.document-detail-wrap{
-			color: #007cff;
-		}
 	}
 	&.is-mobile{
 		.document-action-wrap{
@@ -908,6 +948,13 @@ span.dashicons.dashicons-admin-file:before {
 			outline: 0;
 			border-radius: 35px;
 		}
+	}
+	.document-preview-wrap{
+		height: 200px;
+		overflow: hidden;
+		margin: 0 15px 15px;
+		border: 1px solid #e7e9ec;
+		border-radius: 4px;
 	}
 	.document-text-wrap{
 		.CodeMirror{
@@ -971,7 +1018,18 @@ span.dashicons.dashicons-admin-file:before {
 				.document-action_collapse{
 					opacity: 1;
 					visibility: visible;
-				}
+					i{
+						border-right-width: 0;
+						border-left-width: 1px;
+						color: #461212;
+					}
+					&+ .document-action_download{
+						i{
+							border-left-width: 1px;
+							border-radius: 0;
+						}
+					}
+				} 
 			}
 			.document-expand {
 				opacity: 0 !important;
@@ -983,7 +1041,9 @@ span.dashicons.dashicons-admin-file:before {
 			}
 		}
 	}
+	
 	}
+	
 	  
 }
 .bb-activity-media-wrap {
