--- a/src/bp-templates/bp-nouveau/common-styles/_codemirror.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_codemirror.scss
@@ -27,7 +27,7 @@
 
 .CodeMirror-gutters {
   border-right: 1px solid #ddd;
-  background-color: #f7f7f7;
+  background-color: #ECEDEE;
   white-space: nowrap;
 }
 .CodeMirror-linenumbers {}
