grunt errors fixes

--- a/src/bp-activity/css/mentions-rtl.css
+++ b/src/bp-activity/css/mentions-rtl.css
@@ -11,9 +11,12 @@
 	top: 0;
 	z-index: 1000; /* >999 for wp-admin */
 }
+
+/* stylelint-disable */
 .atwho-view {
 	left: 0;
 }
+/* stylelint-enable */
 
 .atwho-view ul {
 	background: #fff;
