--- a/src/bp-templates/bp-nouveau/common-styles/_bp_filters.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_filters.scss
@@ -252,5 +252,5 @@ a.layout-grid-view {
 }
 
 .flex.bp-secondary-header.align-items-center > .push-right.flex .no-ajax:last-child div div div {
-	margin-right: 0px;
+	margin-right: 0;
 }
