--- a/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
@@ -164,9 +164,9 @@
 			width: auto;
 		}
 
-                label[for=delete-account-understand] {
+		label[for="delete-account-understand"] {
 			display: inline-block;
-                }
+		}
 
 		a.clear-value {
 			display: block;
@@ -291,8 +291,6 @@
 	}
 
 } // close .buddypress-wrap
-
-
 
 // These rules do not belong here really but it's
 // where original styles placed them
