--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -1622,8 +1622,8 @@ td label.platform-activity {
   border: 4px solid #f3f3f3;
   border-top: 4px solid #3498db;
   border-left: 4px solid #008000;
-  border-right: 4px solid #FF0000;
-  border-bottom: 4px solid #FFC0CB;
+  border-right: 4px solid #f00;
+  border-bottom: 4px solid #ffc0cb;
   border-radius: 50%;
   width: 10px;
   height: 10px;
@@ -1743,7 +1743,7 @@ body .section-repair_community .settings fieldset .checkbox label code {
 
 .content-loader div:nth-child(1) {
   right: 8px;
-  animation-delay: -.24s;
+  animation-delay: -0.24s;
 }
 
 .content-loader div:nth-child(2) {
@@ -1761,7 +1761,8 @@ body .section-repair_community .settings fieldset .checkbox label code {
     top: 8px;
     height: 50px;
   }
-  50%, 100% {
+  50%,
+  100% {
     top: 24px;
     height: 28px;
   }
