#266 - Fixed move file issue in activity feed and issue with more options for multiple uploaded files

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -650,7 +650,8 @@ span.dashicons.dashicons-admin-file:before {
         padding: 15px;
         display: inline-block;
         width: 100%;
-        margin: 3px;
+		margin: 3px;
+		position: relative;
         padding: 0;
         &:hover{
             background-color: #f5f6f7;
