--- a/src/bp-templates/bp-nouveau/icons/bb-icons.css
+++ b/src/bp-templates/bp-nouveau/icons/bb-icons.css
@@ -272,7 +272,6 @@
 .bb-icon-x-circle:before { content: '\e8f7'; }
 .bb-icon-zap:before { content: '\e8f8'; }
 .bb-icon-zoom-in:before { content: '\e8f9'; }
-.bb-icon-file-text:before { content: '\e8fa'; }
 .bb-icon-fast-forward:before { content: '\e8fb'; }
 .bb-icon-eye-off:before { content: '\e8fc'; }
 .bb-icon-file-minus:before { content: '\e8fd'; }
@@ -371,6 +370,10 @@
 .bb-icon-code:before { content: '\e95a'; }
 .bb-icon-mp3:before { content: '\e95b'; }
 .bb-icon-sort:before { content: '\e95c'; }
+.bb-icon-all-members:before { content: '\e95d'; }
+.bb-icon-my-connections:before { content: '\e95e'; }
+.bb-icon-only-me:before { content: '\e95f'; }
+.bb-icon-public:before { content: '\e960'; }
 .bb-icon-edit-thin:before { content: '\e965'; }
 .bb-icon-all-results:before { content: '\e966'; }
 .bb-icon-activity-comment:before { content: '\e967'; }
@@ -404,6 +407,26 @@
 .bb-icon-watch-alarm:before { content: '\e985'; }
 .bb-icon-pdf:before { content: '\e986'; }
 .bb-icon-zip:before { content: '\e987'; }
+.bb-icon-file:before { content: '\e98e'; }
+.bb-icon-file-csv:before { content: '\e98f'; }
+.bb-icon-file-ico:before { content: '\e990'; }
+.bb-icon-file-ics:before { content: '\e991'; }
+.bb-icon-file-jar:before { content: '\e992'; }
+.bb-icon-file-ods:before { content: '\e993'; }
+.bb-icon-file-odt:before { content: '\e994'; }
+.bb-icon-file-potm:before { content: '\e995'; }
+.bb-icon-file-potx:before { content: '\e996'; }
+.bb-icon-file-pps:before { content: '\e997'; }
+.bb-icon-file-ppsx:before { content: '\e998'; }
+.bb-icon-file-ppt:before { content: '\e999'; }
+.bb-icon-file-pptm:before { content: '\e99a'; }
+.bb-icon-file-pptx:before { content: '\e99b'; }
+.bb-icon-file-psd:before { content: '\e99c'; }
+.bb-icon-file-rar:before { content: '\e99d'; }
+.bb-icon-file-rtf:before { content: '\e99e'; }
+.bb-icon-file-tar:before { content: '\e99f'; }
+.bb-icon-file-txt:before { content: '\e9a0'; }
+.bb-icon-file-xls:before { content: '\e9a1'; }
 .bb-icon-trash-small:before { content: '\eaea'; }
 .bb-icon-rounded-instagram:before { content: '\eaec'; }
 .bb-icon-rounded-facebook:before { content: '\eaed'; }
